2009-08-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/str.c (strftimet): Added.
	* src/libcommon/str.h: Added strftimet() prototype.  Tweaked comments.

2009-07-30  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Added comment describing latest attack
	  against 11-round AES-256 in 2^70 time.

2009-07-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munge/unmunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Renamed opt_string to short_opts, opt_table to long_opts.

	* src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munge/unmunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Added case for missing option argument.

2009-06-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/enum.c (munge_enum_str_to_int),
	  src/munge/munge.c (parse_cmdline),
	  src/munge/remunge.c (parse_cmdline),
	  src/munged/conf.c (parse_cmdline):
	  Added additional checks for strtol() & strtoul().

2009-05-04  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Added AC_GNU_SOURCE macro (note that it is called
	  before any macros that run the C compiler).  As of glibc 2.8, the
	  _GNU_SOURCE feature test macro must be defined in order to obtain the
	  ucred struct definition.

2009-04-27  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.61, automake-1.10.1.

	* configure.ac: Added AM_PROG_CC_C_O for compiling auth_recv.c with
	  per-target flags.

2009-04-23  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

	* src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/munged/munged.8.in: Changed "--socket string" to "--socket path".

	* src/etc/munge.init.in: Swapped order of CONFIG & DAEMON_ARGS vars.

2009-04-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed LSB Default-Start / Default-Stop and